--- a/脚本命令.md
+++ b/脚本命令.md
@@ -184,9 +184,9 @@ cp -r /workspace/BMService/data/coco/images /workspace/compile_model/coco_datase
 pushd /workspace/compile_model/coco_dataset
 ls *.jpg >imagelist.txt
 popd
-convert_imageset /workspace/compile_model/coco_dataset/ \
-                 /workspace/compile_model/coco_dataset/imagelist.txt \
-                 /workspace/compile_model/coco_lmdb
+convert_imageset /coco_dataset/ \
+                 /coco_dataset/imagelist.txt \
+                 /coco_lmdb
 ```
 
   3. 生成量化文本文件模板
